tenzir/tests/exec/access/field_suggestions.tql
// test: exec
// error: false
// timeout: 10

// Comprehensive test for field name suggestions covering root fields,
// general field access, and index expressions with both close matches
// (that should be suggested) and distant matches (that should not)
from {
  src_ip: "192.168.1.1",
  dest_port: 443,
  message_content: "hello world",
  user: {
    username: "john",
    email_address: "john@example.com"
  }
}
select (
  // Root field access - close matches
  root_close1 = src_i,
  root_close2 = dest_por,
  root_close3 = message_conten,

  // Root field access - distant matches
  root_distant1 = xyz,
  root_distant2 = completely_different,

  // General field access - close matches
  field_close1 = user.usernam,
  field_close2 = user.email_addres,

  // General field access - distant matches
  field_distant1 = user.abc,
  field_distant2 = user.qwerty,

  // Index expressions - close matches
  index_close1 = this["src_i"],
  index_close2 = this["dest_por"],
  index_close3 = user["usernam"],
  index_close4 = user["email_addres"],

  // Index expressions - distant matches
  index_distant1 = this["xyz"],
  index_distant2 = user["abc123"],

  // Test suppression still works
  suppressed_root = nonexistent?,
  suppressed_field = user.missing?,
  suppressed_index = this["missing"]?
)